# AetherChrome

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
app/: Info.plist.in  main.cpp
app/bridge/: PipelineBridge.cpp  PipelineBridge.hpp  PreviewProvider.cpp  PreviewProvider.hpp
app/ui/: ControlPanel.qml  FilmStrip.qml  Main.qml  MaskOverlay.qml  Viewer.qml
app/ui/components/: ALabel.qml  ASlider.qml
core/: IPipelineStage.hpp  ImageBuffer.hpp  PipelineEngine.cpp  PipelineEngine.hpp  Types.hpp
core/ai/: AIMaskController.cpp  AIMaskController.hpp  SAMDecoder.cpp  SAMDecoder.hpp  SAMEncoder.cpp  SAMEncoder.hpp
core/dcp/: DCPProfile.cpp  DCPProfile.hpp
core/gpu/: MetalContext.h  MetalContext.mm
core/gpu/shaders/: ColorMatrix.metal  OutputTransform.metal  ToneMap.metal
core/mask/: ParametricMaskBuilder.cpp  ParametricMaskBuilder.hpp
core/pipeline/: ColorMatrixStage.cpp  ColorMatrixStage.hpp  DCPStage.cpp  DCPStage.hpp  ExposureStage.cpp  ExposureStage.hpp  MaskCompositeStage.cpp  MaskCompositeStage.hpp  OutputTransformStage.cpp  OutputTransformStage.hpp  RawInputStage.cpp  RawInputStage.hpp  ToneMappingStage.cpp  ToneMappingStage.hpp
tests/: run_integration_log.cpp  test_AI.cpp  test_ColorMatrixStage.cpp  test_ExposureAndToneMapping.cpp  test_MaskComposite.cpp  test_MetalPipeline.cpp  test_OutputTransform.cpp  test_PipelineEngine.cpp  test_RawInputStage.cpp  test_dcp_load.cpp
